# remotelegends

./: .gitignore  Bitfield.pm  CMakeLists.txt  Common.pm  Enum.pm  RemoteLegends.proto.hdr  StructFields.pm  StructType.pm  abstract_renderer.py  cpp_renderer.py  exceptions.conf  global_type_renderer.py  legends_service.cpp  legends_service.proto  list.py  methods.inc  proto_renderer.py  protogen.pl  protogen.py  remotelegends.cpp  renderer.py  test_cpp_renderer.py  test_global_type_renderer.py  test_proto_renderer.py  test_protogen.py  test_render_field.py  test_render_type.py  test_renderer.py
include/: conversion.h
perl/: Enum.pm  StructFields.pm
proto/: RemoteLegends.proto
protogen/: .gitignore  CMakeLists.txt  DfLexer.g4  DfParser.g4  abstract_renderer.py  cpp_renderer.py  dag.py  dependencies.py  global_type_renderer.py  list.py  merge.py  proto_renderer.py  protogen.py  test_global_type_renderer.py  test_render_field.py  test_render_type.py
protogen.legacy/: abstract_renderer.py  cpp_renderer.py  global_type_renderer.py  list.py  merge.py  proto_renderer.py  protogen.py  test_cpp_renderer.py  test_global_type_renderer.py  test_proto_renderer.py  test_render_field.py  test_render_type.py
protogen/xml/: art.export  creature-raws.export  df-structures.dag  df.art.xml  df.creature-raws.xml  df.entities.xml  df.history.xml  df.itemimprovements.xml  df.legends.xml  df.map.xml  df.world-data.xml  df.world-site.xml  entities.export  history.export  item-raws.export  itemimprovements.export  items.export  legends.export  map.export  units.export  world-data.export  world-site.export
xml/: df.map.xml  df.world-data.xml
